@@ -1,0 +1,48 @@
+<div style="padding: 5px;">
+<h2><?= $this->translate('Move Content') ?></h2>
+<?php if($this->target != '') { ?>
+<script>
+    window.opener.location.href = 'page/<?= $this->pageid ?>';
+    window.close();
+</script>
+<button class="btn btn-primary" onclick="window.close();"><?= $this->translate('close') ?></button>
+<?php } else { ?>
+<div class="well">
+    <div class="btn-group">
+	<!-- <a class="btn" href="#"><i class="icon-refresh"></i></a> -->
+	<a class="btn" href="javascript:;" onclick="dijit.byId('treeOne').expandAll();"><i class="icon-plus"></i></a>
+	<a class="btn" href="javascript:;" onclick="dijit.byId('treeOne').collapseAll();"><i class="icon-minus"></i></a>
+    </div>
+    <script type="text/javascript">
+	require(["dojo/parser", "dojo/data/ItemFileReadStore", "dijit/Tree"], function() {
+
+	    var store = new dojo.data.ItemFileReadStore({
+		url: "./page/jsontree"
+	    });
+
+	    var treeModel = new dijit.tree.ForestStoreModel({
+		store: store,
+		query: {"type": "root"},
+		rootId: "root",
+		rootLabel: "Knowledgeroot",
+		childrenAttrs: ["children"]
+	    });
+
+	    new dijit.Tree({
+		model: treeModel,
+		showRoot: false,
+		persist: true,
+		onClick: function(item){
+		    // Get the URL from the item, and navigate to it
+		    location.href = 'content/move/<?= $this->contentid ?>/to/' + item.id;
+		}
+	    }, "treeOne");
+	});
+    </script>
+
+    <div id="treeOne"></div>
+</div>
+
+<button class="btn btn-primary pull-right" onclick="window.close();"><?= $this->translate('close') ?></button>
+<?php } ?>
+</div>
