@@ -1,3 +1,6 @@
+20131018 - fhabermann
+* enable move of content
+
 20131017 - fhabermann
 * composer update
 * added gitignore
